# Programacion-Concurrente-TP2

./: README.md
helados_grido/: Cargo.toml
helados_grido/pedidos/: pedidos0.jsonl  pedidos1.jsonl  pedidos2.jsonl
helados_grido/src/: lib.rs  main_g.rs  main_r.rs  main_s.rs
helados_grido/src/gateway/: gateway_action.rs  mod.rs  server.rs
helados_grido/src/robot_lib/: icecream.rs  mod.rs  robot.rs
helados_grido/src/screen_lib/: actors.rs  mod.rs  screen.rs
helados_grido/src/utils/: addresses.rs  errors.rs  messages.rs  mod.rs
