[package]
name = "helados_grido"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
log = "0.4.14"
actix = "0.11.1"
actix-rt = "2.0"
tokio = { version = "1", features = ["full"] }
rand = "0.8.5"
std-semaphore = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "screen"
path = "src/main_s.rs"

[[bin]]
name = "robot"
path = "src/main_r.rs"

[[bin]]
name = "gateway"
path = "src/main_g.rs"
